Adds html to add leaves

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,6 @@
   <h1> Welcome to Hamon hrms </h1>
     <p>
       <a href = "{{url_for('employees')}}">List of employees</a>
+      <a href = "{{url_for('add_leaves')}}">Add leave data</a>
     </p>
 {% endblock %}
