--- a/templates/userdetails.html
+++ b/templates/userdetails.html
@@ -16,7 +16,6 @@
         <th> Email </th>
         <td> {{user.email}}</td>
       </tr>
-
       <tr>
         <th> Phone </th>
         <td> {{user.ph_no}}</td>
@@ -24,6 +23,11 @@
       <tr>
         <th> Number of leaves taken </th>
           <td>{{leaves}}</td>
+      </tr>
+      <tr>
+        <th>Maximum number of leaves</th>
+          <td>{{max_leaves}}</td>
+      </tr>
     </table>
     <a href="{{url_for('employees')}}"> Back to list of employees </a>
 </p>
