--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -6,6 +6,7 @@
         {%for u in users %}
         <li> <a href="{{url_for('employee_details', empid = u.empid)}}">{{u.firstname}} {{u.lastname}}</a></li>
         {%endfor%}
+        <a href = />Back to home page</a>
       </ol>
     </p>
 {% endblock %}
