--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h1> Welcome to Hamon hrms </h1>
+<div class = "containe-fluid">
+<div class = "row">
+  <div class = "col-12">
+   <h1>Welcome to Hamon hrms</h1>
     <p>
-      <a href = "{{url_for('employees')}}">List of employees</a>
-      <a href = "{{url_for('add_leaves')}}">Add leave data</a>
+       Select your option
     </p>
+   </div>
+ </div>
+</div>
 {% endblock %}
