--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -5,6 +5,7 @@
 <div class = "row">
   <div class = "col-5">
   <h1>List of employees</h1>
+  <div style= "height: 735px; overflow: scroll;">
     <p>
       <ol>
         {%for u in users %}
@@ -12,6 +13,7 @@
         {%endfor%}
       </ol>
     </p>
+    </div>
   </div> 
   </div>
 </div>
