--- a/templates/userdetails.html
+++ b/templates/userdetails.html
@@ -43,6 +43,16 @@
           <td>{{max_leaves}}</td>
       </tr>
     </table>
+    <h1> Enter leave data for user </h1>
+<form method="post">
+    <label for="date">Date:</label>
+    <input type="date" name="date" required>
+    <br>
+    <label for="reason">Reason:</label>
+    <textarea id="reason" name="reason" rows="4" cols="10" required></textarea>
+    <br>
+    <input type="submit" value="Submit">
+</form>
 </div>
   </div>
 </div>
