Edits programs as per request

--- a/templates/userdetails.html
+++ b/templates/userdetails.html
@@ -44,7 +44,7 @@
       </tr>
     </table>
     <h1> Enter leave data for user </h1>
-<form method="post">
+<form method="post" id="leaveForm">
     <label for="date">Date:</label>
     <input type="date" name="date" required>
     <br>
