--- a/templates/500.html
+++ b/templates/500.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Oops employee with given id is not found</h1>
+<h1>Oops! some error encountered with the process</h1>
 {% endblock %}
